# serde_map

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  scylla.rs  typesense.rs
src/scylla/: des.rs  mod.rs  ser.rs
